# DeepStream-SIS

./: .gitignore  README.md  install.sh
apps/deepstream-test1/: dstest1_pgie_config.txt
apps/subject1/: .gitignore  commands.sh  config.txt  labels.txt  main.py  run.sh
apps/subject1/custom/: CMakeLists.txt  Makefile  onnx_detection  onnx_detection.cpp  p.cpp  p2.cpp  tensorrt_detection  tensorrt_detection.cpp
apps/subject1/metrics/: main.py
apps/subject1/rois/: DongKhoi_MacThiBuoi.txt  RachBungBinh_NguyenThong_2.txt  TranHungDao_NguyenVanCu.txt  TranKhacChan_TranQuangKhai.txt
apps/subject1/settings/: config.txt
apps/subject1/settings/parser/: Makefile
apps/subject1/tracking-gt/: main.py
